<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="6dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:text="@string/title_filter"
        android:textColor="@color/black" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/label_filter_price"
        android:textColor="@color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/price_min"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="6dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/price_max"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="6dp"
            android:textColor="@color/black" />
    </RelativeLayout>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/range_slider"
        style="@style/Myslider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        app:values="@array/initial_slider_values" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:text="@string/label_filter_city"
        android:textColor="@color/black" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/city_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:selectionRequired="true"
        app:singleSelection="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reset"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_reset"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            app:cornerRadius="6dp"
            app:elevation="0dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/btn_filter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:insetLeft="0dp"
            android:background="@color/colorPrimary"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_filter"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="6dp"
            app:elevation="0dp" />
    </LinearLayout>
</LinearLayout>